--- a/api-info.yaml
+++ b/api-info.yaml
@@ -1,17 +1,17 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: address-book-api
+  name: list-contact-rest-api
   namespace: "external-systems"
-  description: The address-book API
+  description: List contact REST API
   tags:
     - java
     - go
   links:
-    - url: https://github.com/fabandalm/spring-boot-rest-api
+    - url: https://github.com/fabandalm/list-contact-rest-api
       title: GitHub Repo
       icon: github
-    - url: https://github.com/fabandalm/spring-boot-rest-api/blob/master/swagger.json
+    - url: https://github.com/fabandalm/list-contact-rest-api/blob/master/swagger.json
       title: API Spec
       icon: code
 spec:
