--- a/api-info.yaml
+++ b/api-info.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
   name: list-contact-rest-api
-  namespace: "external-systems"
+  namespace: "org"
   description: |
     List contact REST API
   tags:
